--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title>Face Accessories</title>
         <meta name="description" content="Украшения-лица ручной работы">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+        <link rel="shortcut icon" href="assets
+                                       /images/favicon.png" type="image/png">
 
 
         <link rel="stylesheet" href="assets/css/fonticons.css">
